--- a/pages/professionals/downloads.module.scss
+++ b/pages/professionals/downloads.module.scss
@@ -14,9 +14,11 @@
     flex-direction: row;
     align-items: center;
     padding: 0.7em;
+
     @include mq($from: tablet) {
       padding: $gutter 1em $gutter 1em;
     }
+
     background-color: $mid-gray;
     margin-bottom: 1em;
 
@@ -42,8 +44,10 @@
         margin-top: 0.2em;
         padding-bottom: 2em;
 
-        &:hover:not(:first-child) {
-          background-color: $white !important;
+        @include mq($from: tablet) {
+          &:hover:not(:first-child) {
+            background-color: $white !important;
+          }
         }
 
         &.active {
@@ -132,7 +136,7 @@
       }
     }
 
-    * > .image {
+    *>.image {
       position: relative !important;
       margin: 0 !important;
       aspect-ratio: 1, 1;
